<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_title_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/account_register"
        android:textColor="@color/payeco_textColorWhite"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/et_register_account"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_edittext"
        android:hint="@string/account"
        android:paddingLeft="10dp"
        android:textColor="@color/payeco_textColorWhite"
        android:textColorHint="@color/payeco_textColorWhite" />

    <EditText
        android:id="@+id/et__register_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_edittext"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textColor="@color/payeco_textColorWhite"
        android:textColorHint="@color/payeco_textColorWhite" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_register_back"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/bg_submit"
            android:gravity="center"
            android:text="@string/back"
            android:textColor="@color/payeco_textColorBlack"
            android:textSize="18sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1.5" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/bg_submit"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/payeco_textColorBlack"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_help"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autoLink="all"
            android:text="@string/help"
            android:textColor="@color/easou_thin5_color" />

        <TextView
            android:visibility="gone"
            android:id="@+id/tv_look_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autoLink="all"
            android:gravity="center_horizontal"
            android:text="@string/look_password"
            android:textColor="@color/easou_thin5_color" />

        <TextView
            android:id="@+id/tv_user_service"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autoLink="all"
            android:gravity="right"
            android:text="@string/user_service"
            android:textColor="@color/easou_thin5_color" />
    </LinearLayout>
</LinearLayout>