<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_title_authentication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/authentication"
        android:visibility="gone"
        android:textColor="@color/payeco_textColorWhite"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/et_inputname"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_edittext"
        android:hint="@string/inputname"
        android:paddingLeft="10dp"
        android:textColor="@color/payeco_textColorWhite"
        android:textColorHint="@color/payeco_textColorWhite" />

    <EditText
        android:id="@+id/et_inputidnumber"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_edittext"
        android:hint="@string/inputidnumber"
        android:paddingLeft="10dp"
        android:textColor="@color/payeco_textColorWhite"
        android:textColorHint="@color/payeco_textColorWhite" />
    <TextView
        android:id="@+id/tv_authen_noti"
        android:text="@string/authen_noti"
        android:textColor="@color/easou_thin1_color"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv__changeaccount"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/bg_submit"
            android:gravity="center"
            android:text="@string/changeaccount"
            android:textColor="@color/payeco_textColorBlack"
            android:textSize="18sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1.5" />

        <TextView
            android:id="@+id/tv_authen_submit_dialog"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/bg_submit"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="@color/payeco_textColorBlack"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>