<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/icon_loginbg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/ll_root"
        android:visibility="visible"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="22sp"
            android:id="@+id/tv_loginway"
            android:text="@string/chooseloginway"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/payeco_textColorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:id="@+id/ll_ways"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:drawableTop="@drawable/icon_guestlogin"
                android:textSize="16sp"
                android:id="@+id/tv_guest"
                android:text="@string/guest_login"
                android:gravity="center_horizontal"
                android:textColor="@color/payeco_textColorWhite"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
            <TextView
                android:drawableTop="@drawable/icon_accountlogin"
                android:textSize="16sp"
                android:id="@+id/tv_account_login"
                android:text="@string/account_login"
                android:textColor="@color/payeco_textColorWhite"
                android:gravity="center_horizontal"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
            <TextView
                android:drawableTop="@drawable/icon_accountregister"
                android:textSize="16sp"
                android:id="@+id/tv_account_register"
                android:text="@string/account_register"
                android:gravity="center_horizontal"
                android:textColor="@color/payeco_textColorWhite"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <TextView
            android:id="@+id/tv_guest_noti"
            android:text="@string/guest_noti"
            android:textColor="@color/easou_thin1_color"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <include
        android:visibility="gone"
        android:id="@+id/include_accountlogin"
        layout="@layout/layout_accountlogin"/>
    <LinearLayout
        android:id="@+id/ll_help"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_main_help"
            android:text="@string/help"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="@color/easou_thin5_color"
            android:autoLink="all"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_look_password_loginway"
            android:text="@string/look_password"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="@color/easou_thin5_color"
            android:autoLink="all"
            android:gravity="center_horizontal"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_main_user_service"
            android:text="@string/user_service"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="right"
            android:textColor="@color/easou_thin5_color"
            android:autoLink="all"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <include
        android:visibility="gone"
        android:id="@+id/include_lookpassword"
        layout="@layout/layout_lookpassword"/>
</LinearLayout>