<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_centerHorizontal="true"
            android:id="@+id/tv_lookpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/look_password"
            android:textColor="@color/payeco_textColorWhite"
            android:textSize="22sp" />
        <ImageView
            android:padding="10dp"
            android:layout_alignParentRight="true"
            android:id="@+id/iv_close_dialog"
            android:src="@drawable/icon_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <EditText
        android:id="@+id/et_phone"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_edittext"
        android:hint="@string/phone"
        android:paddingLeft="10dp"
        android:textColor="@color/payeco_textColorWhite"
        android:textColorHint="@color/payeco_textColorWhite" />

    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <EditText
            android:id="@+id/et_code"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/bg_edittext"
            android:hint="@string/vercode"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textColor="@color/payeco_textColorWhite"
            android:textColorHint="@color/payeco_textColorWhite" />
        <TextView
            android:layout_alignParentRight="true"
            android:id="@+id/tv_getcode"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:background="@drawable/bg_getcode"
            android:textColor="@color/payeco_textColorWhite"
            android:text="@string/getvercode"
            android:layout_width="60dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:layout_height="match_parent"/>
    </RelativeLayout>

    <EditText
        android:id="@+id/et_newpassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_edittext"
        android:hint="@string/newpassword"
        android:paddingLeft="10dp"
        android:textColor="@color/payeco_textColorWhite"
        android:textColorHint="@color/payeco_textColorWhite" />

    <TextView
        android:id="@+id/tv_submit"
        android:text="@string/submit"
        android:textColor="@color/payeco_textColorBlack"
        android:background="@drawable/bg_submit"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="100dp"
        android:layout_height="30dp"/>

</LinearLayout>