<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingTop="30dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_authen_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:src="@drawable/icon_back" />

    <TextView
        android:id="@+id/iv_authen_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/iv_authen_back"
        android:gravity="center_horizontal"
        android:text="@string/authentication"
        android:textColor="@color/payeco_textColorWhite"
        android:textSize="18sp" />

    <EditText
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@id/iv_authen_title"
        android:id="@+id/et_user_inputname"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_edittext"
        android:hint="@string/inputname"
        android:paddingLeft="10dp"
        android:textColor="@color/payeco_textColorWhite"
        android:textColorHint="@color/payeco_textColorWhite" />

    <EditText
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/et_user_inputidnumber"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/et_user_inputname"
        android:background="@drawable/bg_edittext"
        android:hint="@string/inputidnumber"
        android:paddingLeft="10dp"
        android:textColor="@color/payeco_textColorWhite"
        android:textColorHint="@color/payeco_textColorWhite" />
    <TextView
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/tv_userauthen_noti"
        android:text="@string/authen_noti"
        android:textColor="@color/payeco_textColorWhite"
        android:layout_below="@id/et_user_inputidnumber"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_authen_submit"
        android:text="@string/submit"
        android:layout_marginTop="40dp"
        android:textSize="18sp"
        android:layout_below="@id/tv_userauthen_noti"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_submit"
        android:textColor="@color/payeco_textColorBlack"
        android:layout_width="80dp"
        android:gravity="center"
        android:layout_height="40dp"/>

</RelativeLayout>