<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">
    <TextView
        android:textSize="22sp"
        android:id="@+id/tv_account_type"
        android:text="@string/account_login"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/payeco_textColorWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <EditText
            android:id="@+id/et_login_account"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:singleLine="true"
            android:background="@drawable/bg_edittext"
            android:hint="@string/account"
            android:paddingLeft="10dp"
            android:textColor="@color/payeco_textColorWhite"
            android:textColorHint="@color/payeco_textColorWhite" />
        <ImageView
            android:id="@+id/iv_expan"
            android:src="@drawable/icon_expanall"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
    </RelativeLayout>


    <EditText
        android:id="@+id/et_login_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_edittext"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textColor="@color/payeco_textColorWhite"
        android:textColorHint="@color/payeco_textColorWhite" />

    <LinearLayout
        android:gravity="center_horizontal"
        android:id="@+id/ll_userservice"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:text="同意"
            android:textColor="@color/payeco_textColorWhite"
            android:id="@+id/cb_userservice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginLeft="4dp"
            android:textColor="@color/c_blue"
            android:id="@+id/tv_private"
            android:text="隐私政策，"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginLeft="4dp"
            android:textColor="@color/c_blue"
            android:id="@+id/tv_service"
            android:text="用户协议"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv__login_back"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/bg_submit"
            android:gravity="center"
            android:text="@string/back"
            android:textColor="@color/payeco_textColorBlack"
            android:textSize="18sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1.5" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/bg_submit"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/payeco_textColorBlack"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_help"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autoLink="all"
            android:text="@string/help"
            android:textColor="@color/easou_thin5_color" />

        <TextView
            android:id="@+id/tv_look_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autoLink="all"
            android:gravity="center_horizontal"
            android:text="@string/look_password"
            android:textColor="@color/easou_thin5_color" />

        <TextView
            android:id="@+id/tv_user_service"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autoLink="all"
            android:gravity="right"
            android:text="@string/user_service"
            android:textColor="@color/easou_thin5_color" />
    </LinearLayout>
</LinearLayout>