<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:src="@drawable/es_iconback" />

    <TextView
        android:id="@+id/tv_title_changepw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/iv_back"
        android:gravity="center_horizontal"
        android:text="@string/changepassword"
        android:textColor="@color/easou_thin1_color"
        android:textSize="18sp" />

    <EditText
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:id="@+id/et_newpw"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:paddingLeft="10dp"
        android:layout_below="@id/tv_title_changepw"
        android:background="@drawable/bg_edittext"
        android:gravity="center_vertical"
        android:textColor="@color/payeco_textColorWhite"
        android:textColorHint="@color/payeco_textColorWhite"
        android:hint="@string/newpassword"
        android:textSize="18sp" />
    <EditText
        android:id="@+id/et_oldpw"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:paddingLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/et_newpw"
        android:background="@drawable/bg_edittext"
        android:gravity="center_vertical"
        android:textColor="@color/payeco_textColorWhite"
        android:textColorHint="@color/payeco_textColorWhite"
        android:hint="@string/oldpassword"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/tv_password_submit"
        android:text="@string/submit"
        android:layout_marginTop="40dp"
        android:textSize="18sp"
        android:layout_below="@id/et_oldpw"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_submit"
        android:textColor="@color/payeco_textColorBlack"
        android:layout_width="80dp"
        android:gravity="center"
        android:layout_height="40dp"/>
</RelativeLayout>